@@ -100,6 +100,7 @@ export(jsd)
 export(modularity)
 export(net.loads)
 export(net.scores)
+export(network.compare)
 export(network.estimation)
 export(network.predictability)
 export(polychoric.matrix)
